@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST cri-1.0.1.gem 9216 RMD160 56b45445fb1aa3abac59aecb647717d2ec1ad0d2 SHA1 15f96e9d35d0b7cd91cdfd4245c12f2ea604841d SHA256 071520a245133a4afdb13ab179de92a92ea3179108e76f6af4fa54c26096e108
+DIST cri-2.0.1.gem 16896 RMD160 c455d55e0422e96dad4ed7d8395aa9572a83f508 SHA1 efd323a9c0696e3a721fb6da352927d2ae5a1093 SHA256 8c2020b8cb3dcd86a789f3f8962b3d71c26ad5f3b20d0ffcec721b2d78e6556c
 EBUILD cri-1.0.1.ebuild 535 RMD160 aacc0ab852717819c253871f59c43dd47a65bdc9 SHA1 6e058daca5d230567c8a0795e9a586aff434f013 SHA256 6ec916d5a6353505f40e5bd934157b22f5e27b5e56c5e4f520469087864f90d9
-MISC ChangeLog 265 RMD160 a955e7d21d02fd9c345ab00a94b55af4b9fef950 SHA1 2b3daa2a84529548fbbd28c853d9791787ef6af9 SHA256 7d06f40ef47fea2efcbc101d68c6b292eb7bd3bf6979731e77cc0099a321af75
+EBUILD cri-2.0.1.ebuild 515 RMD160 3c47f8e1a78b69de17b9d1433550441b588e2c6e SHA1 76e8c46265a90f2fe8732cf85f1d7e7ca368b93f SHA256 eef31418db2d57b258722539fb39bd3e51131b8979c8302f3ba087ece6d7e87b
+MISC ChangeLog 377 RMD160 3336c60d77b54ed22fb9a3ba76c5d1641d7ed9b8 SHA1 f847df7b4b71278132faf164dad8e852b0a7d189 SHA256 d8e35aaa5104dd55ebbc49a8b3d1c8ebe350f4683bfbd1bc39de7709ada8353e
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAkzzvzAACgkQZihJkut28StrtgD/aXOioFNuukaRUC4X1V9Dq+zx
-SxzpKbw6QKd2q2DZQukBALeggfiEAjVXnTmt3DVAX6+7MPSeTbpQr866pL0G1aW5
-=M1dx
+iF4EAREIAAYFAk4XBGcACgkQiIP6VqMIqNf1EQEAgyMFI5Sc5OBQq6Pctzt1CFUf
+ZqL9V5CZd+Z9lbhmkEcA/iEvaKTkIcKJmq1piC2N8O9tq7R7evl+WL4SNyvj7X6e
+=VZuh
 -----END PGP SIGNATURE-----
