@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/cri
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cri-2.0.1 (08 Jul 2011)
+
+  08 Jul 2011; Hans de Graaff <graaff@gentoo.org> +cri-2.0.1.ebuild:
+  Version bump.
 
 *cri-1.0.1 (29 Nov 2010)
 
